2006-01-18  Kazu Hirata  <kazu@codesourcery.com>

	* mode-switching.c (optimize_mode_switching): Make it static.
	* basic-block.h: Remove the prototype for
	optimize_mode_switching.

	* modulo-sched.c (sms_schedule): Make it static.
	* rtl.h: Remove the prototype for sms_schedule.

2006-01-18  Eric Botcazou  <ebotcazou@adacore.com>

	* config/alpha/alpha.c (alpha_split_tfmode_pair): Rename into
	alpha_split_tmode_pair.  Add 'mode' and 'fixup_overlap' arguments.
	Test against the appropriate null constant for the mode.
	If 'fixup_overlap' is true, swap the operands if they overlap.
	(alpha_split_tfmode_frobsign): Adjust call to alpha_split_tfmode_pair.
	* config/alpha/alpha-protos.h (alpha_split_tfmode_pair): Rename into
	alpha_split_tmode_pair and adjust for above change.
	* config/alpha/alpha.md (movtf_internal): Adjust call to
	alpha_split_tfmode_pair and rely on it to swap the operands.
	(movti_internal): New insn and post-reload splitter.
	(movti): New expander.

2006-01-18  Philippe De Muyter  <phdm@macqel.be>

	* config/m68k/m68k.md (*addsi3_5200): Allow addq/subq to memory
	operands.

2006-01-18  Kazu Hirata  <kazu@codesourcery.com>

	* rtlanal.c (global_reg_mentioned_p_1,
	global_reg_mentioned_p): Remove.
	* rtl.h: Remove the prototype for global_reg_mentioned_p.

	* flow.c (initialize_uninitialized_subregs): Make it static.
	* rtl.h: Remove the prototype for
	initialize_uninitialized_subregs.

	* function.c (instantiate_virtual_regs): Make it static.
	* function.h: Remove the prototype for
	instantiate_virtual_regs.

	* regmove.c (regmove_optimize, combine_stack_adjustments):
	Make them static.
	* rtl.h: Remove the prototypes for regmove_optimize and
	combine_stack_adjustments.

2006-01-17  Roger Sayle  <roger@eyesopen.com>

	* config/i386/i386.c (COSTS_N_BYTES): New macro.
	(size_cost): Encode costs in bytes so that a reg-reg addition is
	equivalent to COSTS_N_INSNS(1).
	(override_options): Use the size_cost.branch_cost as the default