@@ -7,6 +7,9 @@
 	* modulo-sched.c (sms_schedule): Make it static.
 	* rtl.h: Remove the prototype for sms_schedule.
 
+	* postreload-gcse.c (gcse_after_reload_main): Make it static.
+	* rtl.h: Remove the prototype for gcse_after_reload_main.
+
 2006-01-18  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* config/alpha/alpha.c (alpha_split_tfmode_pair): Rename into
